stateDiagram-v2
    [*] --> draft : นักศึกษาสร้าง

    draft --> submitted : นักศึกษาส่ง
    submitted --> advisor_in_review : ระบบส่งให้ที่ปรึกษา
    advisor_in_review --> advisor_approved : ที่ปรึกษาอนุมัติ
    advisor_in_review --> submitted : ที่ปรึกษาปฏิเสธ (แก้ไข)
    advisor_approved --> staff_verified : เจ้าหน้าที่ตรวจสอบ
    advisor_approved --> submitted : เจ้าหน้าที่ปฏิเสธ
    staff_verified --> scheduled : กำหนดวัน/สถานที่สอบ
    scheduled --> completed : สอบเสร็จ

    draft --> cancelled : ยกเลิก
    submitted --> cancelled : ยกเลิก

    completed --> [*]
    cancelled --> [*]
